syntax = "proto3";

package llm;

option go_package = "github.com/shashwatssp/deeprecall/api/proto/llm";

service LLMService {
  rpc Generate(GenerateRequest) returns (GenerateResponse);
}

message Message {
  string role = 1;
  string content = 2;
}

message GenerateRequest {
  repeated Message messages = 1;
  int32 max_tokens = 2;
  float temperature = 3;
}

message GenerateResponse {
  string content = 1;
  int32 tokens_used = 2;
  string finish_reason = 3;
  int64 response_time_ms = 4;
}
